@@ -9,9 +9,9 @@ data("EXAMPLE_DATA_list")
 test_that("bayNorm runs properly",
           {
 set.seed(1258484)
-q1<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = F)
+q1<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = FALSE)
 set.seed(1258484)
-q2<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = F)
+q2<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = FALSE)
 expect_identical(q1, q2)
 }
 )
@@ -20,10 +20,10 @@ expect_identical(q1, q2)
 test_that("bayNorm_sup runs properly",
           {
             set.seed(1258484)
-            q1<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = F)
+            q1<- bayNorm(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],BETA_vec = EXAMPLE_DATA_list$inputbeta,parallel = FALSE)
 
             set.seed(1258484)
-            q2<- bayNorm_sup(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],PRIORS=q1$PRIORS,input_params = q1$input_params,parallel = F)
+            q2<- bayNorm_sup(Data=EXAMPLE_DATA_list$inputdata[seq(1,10),],PRIORS=q1$PRIORS,input_params = q1$input_params,parallel = FALSE)
             expect_identical(q1$PRIORS, q2$PRIORS)
             }
 )
